--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,5 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+   font-size: 18px;
+}
 
-
+.loader-container {
+   width: 100%;
+   height: 100vh;
+   position: fixed;
+   background: rgba(0, 0, 0, 0.834)
+       url("https://media.giphy.com/media/8agqybiK5LW8qrG3vJ/giphy.gif") center
+       no-repeat;
+   z-index: 1;
+}
