--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,16 @@
+.dark-overlay:before {
+   content: "";
+   position: absolute;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background-color: rgba(0, 0, 0, 0.4);
+   border-radius: 1rem;
+}
 
-
-
+#bg-video {
+   filter: brightness(50%);
+ }
+ 
+ 
