added map to destination

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,11 @@ body {
    z-index: 1;
 }
 
+.mapboxgl-popup {
+   max-width: 400px;
+   font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
+
+.text-primary {
+   color:#1a2b49;
+}
